deployment/base/deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: spring-api
spec:
  template:
    spec:
      containers:
      - name: spring-api
        image: shboland/spring-api
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "256Mi"
            cpu: "200m"
          limits:
            memory: "512Mi"
            cpu: "200m"
