deployment/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-api
spec:
  selector:
    app: spring-api
  ports:
    - name: web
      port: 8080
    - name: actuator
      port: 8081
